--- a/app/assets/css/globals.css
+++ b/app/assets/css/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import "./buy-card.css";
+
 @layer base {
   :root {
     --background: 42 84% 5%;
@@ -31,6 +33,8 @@
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
+
+    --radius: 0.5rem
   }
 }
 
@@ -38,6 +42,7 @@
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
